tests/tooling/fixtures/native/recovery/negative/negative_parameter_bool_pointer_declarator.objc3
// Negative fixture: bool parameter pointer declarator remains unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeParameterBoolPointerDeclarator;

fn choose(flag: bool*) -> i32 {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  return choose(1);
}
